[package]
name = "rsraw-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
rsraw-sys = { git = "https://github.com/hexilee/rsraw.git", package = "rsraw-sys" }
rsraw = { git = "https://github.com/hexilee/rsraw.git" }
tiff = "0.11.3"
image = "0.25"
uuid = { version = "1.22.0", features = ["v4"] }